--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NextActivity"/>
-        <activity android:name=".MainActivity"
+        <activity android:name=".FourActivity"></activity>
+        <activity android:name=".ThreeActivity" />
+        <activity android:name=".TestActivity" />
+        <activity android:name=".NextActivity" />
+        <activity
+            android:name=".MainActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
