--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,17 +15,27 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            manifestPlaceholders = [ty_url_scheme: "tingyun.6"]
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
         release {
+            manifestPlaceholders = [ty_url_scheme: "tingyun.4"]
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+
     }
 
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
