--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecyclerviewSnapActivity"></activity>
+        <activity android:name=".DateActivity"></activity>
+        <activity android:name=".TextActivity" />
+        <activity android:name=".PaletteActivity" />
+        <activity android:name=".RecyclerviewSnapActivity" />
         <activity android:name=".VPActivity" />
         <activity
             android:name=".MainActivity"
