--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ikang.mydark">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
@@ -10,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".fanshe.FanSheActivity"></activity>
+        <activity android:name=".OomTestActivity"></activity>
+        <activity android:name=".sisuo.SiSuoActivity" />
+        <activity android:name=".fanshe.FanSheActivity" />
         <activity android:name=".CloneObjectTestActivity" />
         <activity android:name=".TextBoldActivity" />
         <activity android:name=".statictest.StaticTest2Activity" />
